02/27/2004 Bob Rossi <bob@brasko.net>

    * lib: Add directory

01/29/2004 Bob Rossi <bob@brasko.net>

   * cgdb.c: Changed PATH_MAX to FSUTIL_PATH_MAX and #include <limits.h> to
   #include "fs_util.h"
   * interface.c: ditto
   * highlight.c: Changed PATH_MAX to FSUTIL_PATH_MAX

01/08/2004 Bob Rossi <bob@brasko.net>
    
   * Makefile.in: regenerated with documented autotools version
   * src/Makefile.in: ditto

version 0.4.0-1 cygwin release

12/03/2003 Ronald Landheer-Cieslak <ronald@landheer.com>
   * Makefile.in: regenerated
   * src/Makefile.am: set linker flags (-L) relative to build directory
   set include path (-I) relative to source directory
   * src/Makefile.in: regenerated

version 0.4.0 (10/28/2003):

10/28/2003 Bob Rossi <bob@brasko.net>

   * tokenizer/src/Makefile.in: ran autoregen.sh

10/26/2003 Bob Rossi <bob@brasko.net>

   * command_lexer.l: add impossible function call to stop compiler warning.
   * command_lexer.c: generated from above file.
   * adalexer.l: add impossible function call to stop compiler warning.
   * adalexer.c: generated from above file.
   * clexer.l: add impossible function call to stop compiler warning.
   * clexer.c: generated from above file.

10/24/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: process_commands, change to make sure absolute_path is not NULL :)

10/24/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: process_commands, just check to see if absolute_path is NULL.

10/13/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: process_commands, no longer call tgdb_types_free_command.
   TGDB does the work automatically now.

10/13/2003 Bob Rossi <bob@brasko.net>

   * highlight.c: Changed every occurence from 'string_*' to 'ibuf_*'
   * tokenizer.c: ditto

10/12/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: Adding global #define of MAXLINE ( used to be in TGDB )

10/05/2003 Bob Rossi <bob@brasko.net>

   * cgdb.c: process_commands, remove case TGDB_QUIT_NORMAL and
   TGDB_QUIT_ABNORMAL to add TGDB_QUIT.
