@@ -84,7 +84,7 @@ IGNORE_PREFIX          =
 #---------------------------------------------------------------------------
 GENERATE_HTML          = YES
 #HTML_OUTPUT            = html
-HTML_OUTPUT            = html-libcgdbsupport
+HTML_OUTPUT            = html-cgdbsupport
 HTML_FILE_EXTENSION    = .html
 HTML_HEADER            = 
 HTML_FOOTER            = 
