@@ -1,3 +1,7 @@
+03/02/2004 Bob Rossi <bob@brasko.net>
+
+    * lib/Doxyfile: Changing name of output file. 
+
 02/27/2004 Bob Rossi <bob@brasko.net>
 
     * lib: Add directory
